# Aquarius

./: CMakeLists.txt  README.md  todo.md
include/: Camera.h  Game.h  Geometry.h  Mesh.h  Model.h  Object.h  Renderable.h  ShaderProgram.h  Texture.h
include/planets/: Chunk.h  MarchingCubes.h  Perlin.h  Planet.h  voxels.h
include/primitives/: Cube.h  Primitive.h
res/: uvmap.DDS
shaders/: simple.frag  simple.geom  simple.vert
src/: Camera.cpp  Game.cpp  Geometry.cpp  Mesh.cpp  Model.cpp  Object.cpp  ShaderProgram.cpp  Texture.cpp  main.cpp
src/planets/: Chunk.cpp  MarchingCubes.cpp  Perlin.cpp  Planet.cpp  voxels.cpp
src/primitives/: Cube.cpp  Primitive.cpp
